[package]
name = "tee-worker-pre-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-signer = "0.15.9"
alloy-signer-local = "0.15.9"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha256 = "1.6.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = "1.45.0"

[dev-dependencies]
mockito = "1.7.0"
serial_test = "3.2.0"
temp-env = "0.3.6"
wiremock = "0.6.3"
