[package]
name = "tee-worker-pre-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
alloy-signer = "0.15.9"
alloy-signer-local = "0.15.9"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
log = "0.4.27"
multiaddr = "0.18.2"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
sha256 = "1.6.0"
sha3 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
mockall = "0.13.1"
serde_json = "1.0.140"
temp-env = "0.3.6"
tempfile = "3.20.0"
testcontainers = { version = "0.25.0", features = ["blocking"] }
testing_logger = "0.1.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.3"
